Update to attempt fixing usercard image overflow on mobile view #3

--- a/src/css/ImageCSSModule.module.css
+++ b/src/css/ImageCSSModule.module.css
@@ -6,17 +6,15 @@
 }
 
 .userAvatar {
-  min-height: 20rem;
-  max-height: 20rem;
+  height: 20rem;
   padding: 2.5rem 2.5rem 0 2.5rem;
 }
 
 @media only screen and (max-width: 600px) {
   .userAvatar {
-    min-height: 20rem;
-    max-height: 20rem;
-    padding: 0;
-    margin: 2.5rem;
+    height: 20rem;
+    width: 20rem;
+    padding: 2.5rem 0 0 0;
   }
 
   .userTitle {
